# LongNovelInsight

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: README.md  config.py  db.py  main.py  provider_presets.py  pyproject.toml
backend/models/: __init__.py  analysis_artifact.py  analysis_output.py  analysis_run.py  chapter.py  chat.py  chunk.py  cross_work_run.py  document.py  embedding_cache.py  entity_mention.py  enums.py  extracted_atom.py  global_entity.py  graph_snapshot.py  job.py  job_item.py  local_extraction.py  model_provider.py  retrieval_trace.py  timeline_item.py  topic.py  topic_provider_config.py  work.py
backend/prompts/: causality.md  characters.md  events.md  overview.md  relations.md  themes.md
backend/routers/: analysis_jobs.py  analysis_outputs.py  analysis_runs.py  chat.py  cross_work.py  documents.py  entities.py  health.py  model_providers.py  parse.py  provider_presets.py  retrieve.py  search.py  topic_provider_config.py  topics.py  works.py
backend/scripts/: clean_cache.py  smoke_backend.py  smoke_v2_backend.py
backend/services/: analysis_response_parser.py  analysis_run_service.py  analysis_selection_service.py  analysis_service.py  analysis_worker.py  artifact_storage_service.py  atom_normalizer.py  chat_service.py  cross_work_entity_service.py  cross_work_graph_service.py  cross_work_run_service.py  cross_work_timeline_service.py  document_service.py  embedding_service.py  epub_parser_service.py  final_output_service.py  fts_service.py  job_service.py  llm_client.py  local_extraction_worker.py  merge_service.py  parser_service.py  prompt_loader.py  provider_config_service.py  provider_test_service.py  retrieval_service.py  source_document.py  stable_id_service.py  storage.py  topic_service.py  work_service.py
(+173 files in other folders)
