[project]
name = "longnovelinsight-backend"
version = "0.1.0"
description = "Backend for LongNovelInsight — local-first LLM-powered novel analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlmodel>=0.0.22",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
cache_dir = "../.cache/pytest"
markers = [
    "integration: slow tests that require a running backend and real LLM",
]

[tool.ruff]
target-version = "py311"
line-length = 100
cache-dir = "../.cache/ruff"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "E702"]
"services/analysis_run_service.py" = ["E501"]
"services/merge_service.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
